<resources>
    <string name="app_name">MangleText</string>
    <string name="qotd_attr">Quote of the Day from</string>
    <string name="they_said_so">They Said So</string>
    <string name="sample_text">Sample Text</string>
    <string name="take_me_btn">Take me to the translations!</string>
    <string name="enter_your_own">Or…Enter Your Own Text</string>
    <string name="author_label">By (or attributed to)</string>
    <string name="orig_text_label">Original Text</string>
    <string name="lang_trans">Language pathway used</string>
    <string name="trans_text">Translated text</string>
    <string name="translate_btn">Translate with Google</string>
    <string name="translate_again">Translate with Google</string>
    <string name="translated_through">Translated by Google</string>
    <string name="translate_instr">To add a translation press the middle button. Each press
    will translate once; please translate multiple times</string>

    <string name="save_trans">Save original and translated text</string>
    <string name="please_wait">Please wait…</string>
    <string name="saved_instr">Click on a row to see (and maybe retranslate!) a previous mangled quotations;
    swipe right to delete</string>

    <string name="cant_download_models">Unable to download language models; check for internet
    connection (only need to download first time you use app) and permission and restart app</string>

    <string name="no_internet_warning">App doesn\'t have permission to access Internet;
    will use cached or backup quote</string>

    <string name="saved_btn">See saved translations</string>
    <string name="retrans_btn">Retranslate in a different order</string>

    <string name="pref_file">com.example.MangeText.PREFERENCE_FILE_KEY</string>
    <string name="cached_quote">cached_quote</string>
    <string name="cached_date">cached_date</string>
    <string name="cached_author">cached_author</string>
    <string name="backup_quote">Betty Botter bought some butter
But she said the butter’s bitter
If I put it in my batter, it will make my batter bitter
But a bit of better butter will make my batter better
So ‘twas better Betty Botter bought a bit of better butter</string>
    <string name="backup_author">Unknown</string>

    <string name="download">Downloading…This may take a few minutes the first time you run the program.
    If no progress after a minute, check internet connection and restart</string>

</resources>