<?xml version="1.0" encoding="utf-8"?>
<!--<layout xmlns:android="http://schemas.android.com/apk/res/android"-->
<!--    xmlns:app="http://schemas.android.com/apk/res-auto"-->
<!--    xmlns:tools="http://schemas.android.com/tools">-->
<!--    <data>-->
<!--        <variable-->
<!--            name="viewModel"-->
<!--            type="com.example.mangletext.QuoteSelectionViewModel" />-->
<!--    </data>-->

    <androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:padding="16dp">

    <TextView
        android:id="@+id/tv_qotd_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/qotd_attr"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

        <TextView
            android:id="@+id/tv_qotd_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="testestest"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_qotd_label" />

        <TextView
            android:id="@+id/tv_your_own_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_your_own"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_qotd_text" />

            <EditText
                android:id="@+id/tv_your_own_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/tv_your_own_label"
                app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/btn_take_me"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tv_your_own_text"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/take_me_btn" />



</androidx.constraintlayout.widget.ConstraintLayout>
<!--</layout>-->
