<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="viewModel"
            type="com.example.mangletext.mangling.ManglingViewModel" />
    </data>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

<androidx.constraintlayout.motion.widget.MotionLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layoutDescription="@xml/animation"
    android:id="@+id/view_master"
    android:padding="20dp"
    tools:context=".mangling.ManglingFragment">

    <TextView
        android:id="@+id/tv_instructions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_size_medium"
        android:gravity="center"
        android:text="@string/translate_instr"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_orig_text_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_size_medium"
        android:text="@string/orig_text_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_instructions"/>

    <TextView
        android:id="@+id/tv_orig_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/purple_200"
        android:textColor="@color/white"
        android:gravity="center"
        android:minHeight="200dp"
        android:text="@{viewModel.quotation}"
        android:textSize="@dimen/text_size_medium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_orig_text_label"
        tools:text="@string/orig_text_label" />
    <TextView
        android:id="@+id/tv_author_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/author_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_orig_text"
        android:textSize="@dimen/text_size_medium" />
    <TextView
        android:id="@+id/tv_author_orig"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity = "end"
        android:textSize="@dimen/text_size_medium"
        tools:text="@string/author_label"
        android:text="@{viewModel.author}"
        app:layout_constraintTop_toBottomOf="@id/tv_author_label"
        app:layout_constraintStart_toStartOf="parent" />

    <!--Button
        android:id="@+id/btn_translate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@{viewModel.status}"
        android:textSize="@dimen/text_size_medium"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_author_orig" /-->
    <Button
        android:id="@+id/btn_tester"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@{viewModel.status}"
        app:layout_constraintTop_toBottomOf="@id/tv_author_orig"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="@dimen/text_size_medium"
        android:gravity="center"/>

    <ImageView
        android:id="@+id/bouncy_ball"
        android:layout_width="20dp"
        android:layout_height="20dp"
        app:tint="@color/purple_700"
        android:elevation="2dp"
        app:srcCompat="@drawable/ic_face"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/translate_label_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/translated_through"
        app:layout_constraintTop_toBottomOf="@id/btn_tester"
        android:textSize="@dimen/text_size_medium"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/translated_text_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/purple_200"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/translate_label_1"
        android:textSize="@dimen/text_size_medium"
        tools:text="@string/translated_through"
        android:text="@{viewModel.outputQuote}"
        android:gravity="center" />

    <Button
        android:id="@+id/btn_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_trans"
        app:layout_constraintTop_toBottomOf="@id/translated_text_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.motion.widget.MotionLayout>


</ScrollView>
</layout>